@@ -64,7 +64,8 @@ where OPTIONS are any of:\n
     (when level
       (setq *nokogiri-user-level* (read-from-string level))))
 
-  (when (get-command-line-option "--flatten")
+  ;; XXX remove the "or t" when trees work again
+  (when (or t (get-command-line-option "--flatten"))
     (setq *nokogiri-flatten-groups* t))
 
   (when (get-command-line-option "--single-level")
