@@ -57,7 +57,7 @@
     
     (let ((commands (filter-command-list))
 	  (clist (gtk-clist-new-with-titles (list (_ "Command"))))
-	  (text (gtk-text-new))
+	  (text-view (gtk-text-view-new))
 	  (vbox (gtk-vbox-new nil box-spacing))
 	  (scroller (gtk-scrolled-window-new))
 	  (scroller-2 (gtk-scrolled-window-new))
@@ -70,11 +70,12 @@
 	(let ((doc (remove-newlines
 		    (or (wm-documentation
 			 (command-name (nth selection commands)))
-			(_ "Undocumented")))))
-	  (gtk-text-set-point text 0)
-	  (gtk-text-forward-delete text (gtk-text-get-length text))
-	  (gtk-text-insert text nil nil nil doc (length doc))
-	  (gtk-text-set-point text 0)))
+			(_ "Undocumented"))))
+	      (buffer (gtk-text-view-get-buffer text-view))
+	      (iter (gtk-text-iter-new)))
+	  (gtk-text-buffer-set-text buffer doc (length doc))
+	  (gtk-text-buffer-get-start-iter buffer iter)
+	  (gtk-text-buffer-place-cursor buffer iter)))
 
       (define (update-params)
 	(let ((new-spec (command-type (nth selection commands))))
@@ -95,6 +96,7 @@
 
       (gtk-signal-connect clist "select_row"
 			  (lambda (w row col)
+			    (declare (unused w col))
 			    (setq selection row)
 			    (update-params)
 			    (update-doc)
@@ -105,21 +107,23 @@
 			  (lambda ()
 			    (gtk-clist-moveto clist selection 0)))
 
-      (gtk-text-set-word-wrap text 1)
-      (gtk-editable-set-editable text nil)
-      (gtk-widget-set-usize text -2 50)
+      (gtk-text-view-set-wrap-mode text-view 'word)
+      (gtk-text-view-set-editable text-view nil)
+      ;; XXX fixme
+      ;;(gtk-widget-set-usize text -2 50)
       (gtk-clist-set-selection-mode clist 'browse)
       (gtk-scrolled-window-set-policy scroller 'automatic 'automatic)
       (gtk-scrolled-window-set-policy scroller-2 'automatic 'automatic)
       (gtk-container-add scroller clist)
-      (gtk-container-add scroller-2 text)
+      (gtk-container-add scroller-2 text-view)
       (gtk-box-pack-end vbox scroller-2)
       (gtk-container-add vbox scroller)
       (gtk-box-pack-end vbox params-hbox)
       (gtk-widget-show-all vbox)
       (unless params-widget
 	(gtk-widget-hide params-hbox))
-      (gtk-widget-set-usize vbox 350 350)
+      ;; XXX fixme
+      ;;(gtk-widget-set-usize vbox 350 350)
       (update-doc)
 
       (lambda (op)
