@@ -36,21 +36,21 @@
 	  (hbox (gtk-hbox-new nil 0))
 	  (combo (gtk-combo-new))
 	  (doc-label (gtk-label-new doc))
-	  (readme-text (gtk-text-new))
+	  (readme-text-view (gtk-text-view-new))
 	  (readme-scroller (gtk-scrolled-window-new))
 	  (value (car options)))
 
       (gtk-box-set-spacing hbox box-spacing)
       (gtk-box-set-spacing vbox box-spacing)
-      (gtk-container-add readme-scroller readme-text)
+      (gtk-container-add readme-scroller readme-text-view)
       (gtk-box-pack-start hbox doc-label)
       (gtk-box-pack-start hbox combo t t)
       (gtk-box-pack-start vbox readme-scroller t t)
       (gtk-box-pack-start vbox hbox nil nil)
       (gtk-label-set-justify doc-label 'left)
-      ;;(gtk-text-set-word-wrap readme-text 1)
-      (gtk-editable-set-editable readme-text nil)
-      (gtk-entry-set-editable (gtk-combo-entry combo) nil)
+      ;;(gtk-text-view-set-wrap-mode readme-text-view 'word)
+      (gtk-text-view-set-editable readme-text-view nil)
+      (gtk-editable-set-editable (gtk-combo-entry combo) nil)
       (gtk-scrolled-window-set-policy readme-scroller 'automatic 'automatic)
 
       (gtk-combo-set-popdown-strings combo (mapcar symbol-name options))
@@ -61,10 +61,10 @@
 			  (lambda ()
 			    (setq value (intern (gtk-entry-get-text
 						 (gtk-combo-entry combo))))
-			    (update-readme value readme-text path)
+			    (update-readme value readme-text-view path)
 			    (call-callback changed-callback)))
 
-      (update-readme value readme-text path)
+      (update-readme value readme-text-view path)
       (gtk-widget-show-all vbox)
 
       (lambda (op)
@@ -80,13 +80,14 @@
   (define-widget-type 'frame-style make-frame-style-item)
   (widget-accepts-doc-string 'frame-style)
 
-  (define (gtk-text-set widget string)
-    (gtk-text-set-point widget 0)
-    (gtk-text-forward-delete widget (gtk-text-get-length widget))
-    (gtk-text-insert widget nil nil nil string (length string))
-    (gtk-text-set-point widget 0))
+  (define (text-view-set view string)
+    (let ((buffer (gtk-text-view-get-buffer view))
+	  (iter (gtk-text-iter-new)))
+      (gtk-text-buffer-set-text buffer string (length string))
+      (gtk-text-buffer-get-start-iter buffer iter)
+      (gtk-text-buffer-place-cursor buffer iter)))
 
-  (define (update-readme value text-widget theme-path)
+  (define (update-readme value text-view theme-path)
     (catch 'out
       (let ((theme (symbol-name value)))
 	(mapc (lambda (dir)
@@ -113,9 +114,9 @@
 				(setq text (get-output-stream-string text))
 				(when (string-match "\\s+$" text)
 				  (setq text (substring text 0 (match-start))))
-				(gtk-text-set text-widget text))
+				(text-view-set text-view text))
 			    (close-file file)))
-		      (gtk-text-set text-widget ""))
+		      (text-view-set text-view ""))
 		    (throw 'out t))))
 	      theme-path)
-	(gtk-text-set text-widget "")))))
+	(text-view-set text-view "")))))
