@@ -1,3 +1,12 @@
+2002-02-12  John Harper  <jsh@unfactored.org>
+
+	* slot.jl, shell.jl, main.jl.in, layout.jl, group.jl: 
+	* layouts/keymaps.jl: 
+	* widgets/match-window.jl, widgets/keymap.jl,
+	widgets/frame-style.jl, widgets/command.jl: 
+
+	Ported to current gnome2 rep-gtk
+
 2002-01-29  John Harper  <jsh@unfactored.org>
 
 	* slot.jl, shell.jl, layout.jl, group.jl, apply.jl: 
